2009-01-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Search/DefaultFind.cs:
	* MonoDevelop.Ide.Gui.Pads/SearchResultPad.cs:
	* MonoDevelop.Ide.Gui.Search/SearchOptions.cs:
	* MonoDevelop.Ide.Gui.Search/KMPSearchStrategy.cs:
	* MonoDevelop.Ide.Gui.Search/BruteForceSearchStrategy.cs: Fixed 'Bug
	456429 - Search and replace broken again'.

2009-01-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: worked on "Bug 456372 -
	Exception in refactoring of a class name from missed reference".

2009-01-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/DocumentSwitcher.cs: fixed "Bug 462848 -
	Monodevelop crash when Alt-Tab with Welcome page opened".

2009-01-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs:
	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs:
	* MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs:
	* MonoDevelop.Ide.Gui.OptionPanels/LoadSavePanel.cs:
	* MonoDevelop.Ide.ExternalTools/ExternalToolPanel.cs:
	* MonoDevelop.Ide.Gui.Dialogs/ReplaceInFilesDialog.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs: Use
	IsValidFilePath instead of IsValidFileName when checking a path.

2008-12-30  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Fix overzealous suppression
	of unnecessary events that caused active window change events not to
	be fired when tabs were closed. Fixes "Bug 461826 - Recurring
	exception related to Document outline" and a few other previously
	unnoticed bugs.

2008-12-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs: Improved
	logic for checking if project names are valid. Patch by Bryce Covert.
	Fixes bug #457847.
