@@ -1,5 +1,10 @@
 2009-01-05  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: fixed "Bug 443771 - Go
+	to declaration not working for base () calls".
+
+2009-01-05  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Ide.Gui.Search/DefaultFind.cs:
 	* MonoDevelop.Ide.Gui.Pads/SearchResultPad.cs:
 	* MonoDevelop.Ide.Gui.Search/SearchOptions.cs:
